--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ pyyaml = "^6.0.1"
 feedparser = "^6.0.10"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.2"
+black = "^23.9.1"
+pytest-mock = "^3.11.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
