--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ pytest = "^7.4.2"
 black = "^23.9.1"
 pytest-mock = "^3.11.1"
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.12.10"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
