--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
 pyyaml = "^6.0.1"
 feedparser = "^6.0.10"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.test.dependencies]
